feat: a command search words with regexp conversion to do it with fuzzy fuzzy

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "fuzzy-fuzzy.helloWorld",
-        "title": "Hello World"
+        "command": "fuzzy-fuzzy.search",
+        "title": "fuzzy search"
       }
     ]
   },
